--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -35,7 +35,7 @@ A execução do comando \textit{composer create-project --prefer-dist laravel/la
     \label{fig:base-projeto}
 \end{figure}
 
-A montagem do ambiente de desenvolvimento para deixa-lo funcional no \textit{framework} Laravel necessitou de algumas configurações, tais como: primeiramente foi preciso instalar e configurar todas as dependências do PHP para que se pudesse ter acesso a linguagem de programação através do gerenciados de dependências Composer.
+A montagem do ambiente de desenvolvimento para deixa-lo funcional no \textit{framework} Laravel necessitou de algumas configurações, tais como: primeiramente foi preciso instalar e configurar todas as dependências do PHP, para que se pudesse ter acesso a linguagem de programação através do gerenciados de dependências Composer.
 
 Foi optado, por questões de controle de versionamento do projeto, hospedar o código-fonte do projeto em nuvem, através da plataforma GitHub. A sincronia entre os arquivos locais e o GitHub foi possível com o auxílio do sistema de controle de versões chamado Git, representado visualmente pelo Sourcetree, que deixa o trabalho braçal por linha de comando (\textit{gitbash}) de lado, sendo também necessário sua instalação e configuração na máquina de desenvolvimento. 
 
