--- a/text-elements/textuais/desenvolvimento/ferramentas/eloquent.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/eloquent.tex
@@ -1,6 +1,6 @@
 %http://repositorio.ufu.br/handle/123456789/26374
 %http://www.repository.ufrpe.br/handle/123456789/1427
-O Eloquent é o \textit{Object Relational Mapper} (ORM) padrão do Laravel. É uma técnica de desenvolvimento de software usada para reproduzir tabelas de banco de dado sem formato de objetos relacionais, deixando a manutenção dos dados mais simples e fácil. Com esta técnica o programador não precisa escrever códigos na linguagem \textit{Structured Query Language} (SQL). Com a interface ORM é possível realizar operações de CRUD, além de criar as tabelas e montar relacionamentos 1:1 (um para um), 1:N (um para muitos) e N:M (muitos para muitos). Utilizando um padrão de registro ativo, o Eloquent transforma a tabela do banco de dados em uma estrutura \textit{Model-View-Controller} (MVC). Por exemplo, para listar todos as entregas da tabela de entregas ou encontrar uma entrega específica basta usar funções simples e intuitivas que equivalem à \textit{query} SQL desejada (\autoref{quadro:Eloquent}).
+O Eloquent é o \textit{Object Relational Mapper} (ORM) padrão do Laravel. É uma técnica de desenvolvimento de software usada para reproduzir tabelas de banco de dado sem formato de objetos relacionais, deixando a manutenção dos dados mais simples e fácil. Com esta técnica o programador não precisa escrever códigos na linguagem \textit{Structured Query Language} (SQL). Com a interface ORM é possível realizar operações de CRUD, além de criar as tabelas e montar relacionamentos 1:1 (um para um), 1:N (um para muitos) e N:M (muitos para muitos). Utilizando um padrão de registro ativo, o Eloquent transforma a tabela do banco de dados em uma estrutura MVC (\textit{Model-View-Controller}). Por exemplo, para listar todos as entregas da tabela de entregas ou encontrar uma entrega específica basta usar funções simples e intuitivas que equivalem à \textit{query} SQL desejada (\autoref{quadro:Eloquent}).
 
 \begin{quadro}[H]
     \centering
