--- a/text-elements/pre-textuais/abstract.tex
+++ b/text-elements/pre-textuais/abstract.tex
@@ -7,7 +7,7 @@
 % \imprimirautorcitacao. \imprimirtitleabstract. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 % %---------------------------------------------------------------------------------------
 
-The 21st century is marked by the immersion of society in the technological environment. Simple tasks like dialogues and research, and complex tasks like banking, pass more or less intensively through the use of the internet. Thus, it appears that this mechanism has become a huge ally of the human being. However, unfortunately, the non insertion into this new era is still a reality for many aspects of everyday life. In this context, the lack of technology used in the transportation sector comes up, this situation deeply affects the workers of the area, especially the motoboys. These professionals, in addition to dealing with traffic stress, spend a large part of their time by pre-arranging the route that will be followed for the delivery batch, and then yet they risk not doing it properly. As a consequence, they often travel a lot of unnecessary miles and no longer make other deliveries, which could potentially turn into a more satisfying financial return by the end of the month. Given this circumstance, and aware of the importance of every second to these individuals, the present work proposes a web application for managing orders and their final destinations, shared through a data exchange API (made available by the sales system already fully operating in the establishment), through the use of tools such as: Laravel and Google Maps, in order to provide time optimization for those involved in this process, avoiding jams and any other situations that represent spatial impediments. This entire process gives the delivery man the best real-time trajectory. Therefore, in seconds, the route properly planned by the application, with possible intervention from admin user for improvement, will be presented to motoboy on your smartphone. \\
+The 21st century is marked by the immersion of society in the technological environment. Simple tasks like dialogues and research, and complex tasks like banking, pass more or less intensively through the use of the internet. Thus, it appears that this mechanism has become a huge ally of the human being. However, unfortunately, the non insertion into this new era is still a reality for many aspects of everyday life. In this context, the lack of technology used in the transportation sector comes up, this situation deeply affects the workers of the area, especially the motoboys. These professionals, in addition to dealing with traffic stress, spend a large part of their time by pre-arranging the route that will be followed for the delivery batch, and then they even risk not doing it properly. As a consequence, they often travel a lot of unnecessary miles and no longer make other deliveries, which could potentially turn into a more satisfying financial return by the end of the month. Given this circumstance, and aware of the importance of every second to these individuals, the present work proposes a web application for managing orders and their final destinations, shared through a data exchange API (made available by the sales system already fully operating in the establishment), through the use of tools such as: Laravel and Google Maps, in order to provide time optimization for those involved in this process, avoiding jams and any other situations that represent spatial impediments. This entire process gives the delivery man the best real-time trajectory. Therefore, in seconds, the route properly planned by the application, with possible intervention from admin user for improvement, will be presented to motoboy on his smartphone. \\
 
 \textbf{Keywords}: Delivery. Geolocation. Google Maps. Web Application.
 
