--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -27,6 +27,7 @@
     \item[JS] \textit{JavaScript}
     \item[JSON] \textit{JavaScript Object Notation}
     \item[MB] Megabyte
+    \item[MIT] Instituto de Tecnologia de Massachusetts
     \item[MPM] \textit{Multi-Processing-Modules}
     \item[MVC] \textit{Model-View-Controller}
     \item[NNTP] \textit{Network News Transfer Protocol}
@@ -43,6 +44,7 @@
     \item[SGBD] Sistemas de Gestão de Base de Dados
     \item[SNMP] \textit{Simple Network Management Protocol}
     \item[SOAP] \textit{Simple Object Access Protocol}
+    \item[SQL] \textit{Structured Query Language}
     \item[SSL] \textit{Secure Sockets Layer}
     \item[TTFF] Tempo de Localização Inicial
     \item[URL] \textit{Uniform Resource Locator}
