--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -25,7 +25,7 @@ Esta Seção apresenta os softwares utilizados na etapa de codificação da apli
 \newpage
 Para o desenvolvimento deste trabalho, foi escolhido trabalhar com Laravel 5.8.11, um \textit{framework} com um servidor interno já incluso e invocado através do comando \textit{php artisan serve}, em conjunto com o XAMPP, o que facilita e agiliza o desenvolvimento. Como o conteúdo estará armazenado na rede local, o acesso aos arquivos é realizado instantaneamente, disponível no endereço \textit{http://127.0.0.1}.
 
-A execução do comando \textit{composer create-project --prefer-dist laravel/laravel delivery-routes} no Cmder gera, de forma padronizada, toda a estrutura de um projeto Laravel, apresentada na \autoref{fig:base-projeto}. O uso do Cmder torna o desenvolvimento, via terminal, do sistema operacional Windows mais amigável. Uma vez que esta ferramenta possibilita a execução de comandos Unix em ambiente Microsoft.
+A execução do comando \textit{composer create-project --prefer-dist laravel/laravel delivery-routes} no Cmder gera, de forma padronizada, toda a estrutura de um projeto Laravel, apresentada na \autoref{fig:base-projeto}. O uso do Cmder torna o desenvolvimento, via terminal, do sistema operacional Windows mais amigável, uma vez que esta ferramenta possibilita a execução de comandos Unix em ambiente Microsoft.
 
 \begin{figure}[H]
     \centering
@@ -35,7 +35,7 @@ A execução do comando \textit{composer create-project --prefer-dist laravel/la
     \label{fig:base-projeto}
 \end{figure}
 
-A montagem do ambiente de desenvolvimento para deixa-lo funcional no \textit{framework} Laravel necessitou de algumas configurações, tais como: primeiramente foi preciso instalar e configurar todas as dependências do PHP, para que se pudesse ter acesso a linguagem de programação através do gerenciados de dependências Composer.
+A montagem do ambiente de desenvolvimento para deixá-lo funcional no \textit{framework} Laravel necessitou de algumas configurações, tais como: primeiramente foi preciso instalar e configurar todas as dependências do PHP, para ter acesso à linguagem de programação através do gerenciados de dependências Composer.
 
 Foi optado, por questões de controle de versionamento do projeto, hospedar o código-fonte do projeto em nuvem, através da plataforma GitHub. A sincronia entre os arquivos locais e o GitHub foi possível com o auxílio do sistema de controle de versões chamado Git, representado visualmente pelo Sourcetree, que deixa o trabalho braçal por linha de comando (\textit{gitbash}) de lado, sendo também necessário sua instalação e configuração na máquina de desenvolvimento. 
 
