--- a/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
@@ -6,7 +6,7 @@ Segundo \citeonline{locaweb:laravel}, Laravel é o \textit{framework} que está 
  O Laravel é uma estrutura de aplicativos da web com sintaxe expressiva e elegante. Acreditamos que o desenvolvimento deve ser uma experiência agradável e criativa para ser verdadeiramente gratificante. O Laravel tenta aliviar a dor do desenvolvimento, facilitando tarefas comuns usadas na maioria dos projetos da web \cite{laravel}.
 \end{citacao}
 
-Com sua baixa curva de aprendizagem e elegância, seu diferencial é a grande quantidade de recursos nativos que o mesmo contém para auxiliar o processo de desenvolvimento. Além disso, o \textit{framework} tem como objetivo aumentar a velocidade de codificação, sem esquecer características importantes como a segurança e performance da aplicação.
+Com sua baixa curva de aprendizagem e elegância, seu diferencial é a grande quantidade de recursos nativos que o mesmo contém para auxiliar o processo de desenvolvimento. Além disso, o \textit{framework} tem como objetivo aumentar a velocidade de codificação, sem esquecer características importantes como a segurança e \textit{performance} da aplicação.
 
 Segundo \citeonline{comparisonLaravel}, afirmaram que ao comparar PHP procedural com CodeIgniter e Laravel, o Laravel tem bom desempenho e menos tempo de execução para todas as quatro ações. Os resultados em milissegundos de dez entradas como média para as quatro ações são apresentados na \autoref{tab:comparisonLaravel}.
 
