--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -8,13 +8,13 @@ O cotidiano do mundo moderno faz com que algumas aplicações virtuais sejam cru
 A locomoção é uma grande preocupação para quem vive em grandes centros urbanos ou, até mesmo, para usuários que visitam cidades com caminhos desconhecidos. Utilizar o carro nem sempre é a melhor decisão ou uma experiência agradável, afinal, congestionamentos já fazem parte do dia a dia do brasileiro, principalmente quando é necessário percorrer um longo caminho na cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgiu, provavelmente em São Paulo, e foi disseminada em todo o país a partir de 1998 \cite{MotoboyVeja}.
 
 %%% Rev-Madalozzo: A primeira frase deste parágrafo também é uma frase sem causa e efeito. Você comenta que é necessária a otimização (causa) mas não efeito o porque é necessária (efeito). Ajustei.
-Diante do cenário urbano atual, faz-se necessário um algoritmo para otimizar as rotas afim de que os profissionais da área de transportes não fiquem suscetíveis a perder seu tempo devido a percursos mal analisados. Considerando essa situação, o desenvolvimento de um aplicativo móvel conectado à \textit{Google Maps Platform}, que proporcione significativa economia de tempo para os usuários, tornar-se-á uma solução para o problema.
+Diante do cenário urbano atual, faz-se necessário um algoritmo para otimizar as rotas a afim de que os profissionais da área de transportes não fiquem suscetíveis a perder seu tempo devido a percursos mal analisados. Considerando essa situação, o desenvolvimento de um aplicativo móvel conectado à \textit{Google Maps Platform}, que proporcione significativa economia de tempo para os usuários, tornar-se-á uma solução para o problema.
 
 A partir da utilização da \textit{Google Maps Platform}, é possível encontrar o melhor trajeto de um ponto inicial até um destino com dados abrangentes e, também, com dados do trânsito em tempo real. Dessa maneira, experiências personalizadas e ágeis são oferecidas, as quais são capazes de transformar o mundo real em virtual, entregando aos usuários mapas estáticos e dinâmicos. 
 
 No segundo Capítulo, são detalhadas as tecnologias utilizadas para o desenvolvimento do presente trabalho, tais como: métodos de geolocalização disponíveis atualmente, Sistema de Posicionamento Global Assistido (A-GPS), serviço de pesquisa e visualização de mapas e imagens de satélite do Planeta Terra, gratuito via internet, por meio do \textit{Google Maps}.
 
-O terceiro Capítulo aborda o estudo das técnicas e das ferramentas que foram necessárias para a construção da aplicação, passando pela linguagem de programação base, \textit{frameworks}, banco de dados e servidor web.
+O terceiro Capítulo aborda o estudo das técnicas e das ferramentas que foram necessárias para a construção da aplicação, incluindo a linguagem de programação base, \textit{frameworks}, banco de dados e servidor web.
 
 No quarto Capítulo é descrito o desenvolvimento da aplicação, denominada Delivery Routes. Esse também, discorre acerca de todos os passos realizados no decorrer do trabalho, tais como: módulo de gerenciamento para controle das entregas, coleta dos dados e o posterior acompanhamento das rotas de entregas.
 
