--- a/text-elements/pos-textuais/apendices.tex
+++ b/text-elements/pos-textuais/apendices.tex
@@ -8,7 +8,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.9\textwidth]{./dados/figuras/apendiceA}
+    \includegraphics[angle=90, width=0.9\textwidth]{./dados/figuras/apendiceA}
 \end{figure}
 
 \end{apendicesenv}
