--- a/text-elements/textuais/desenvolvimento/desenvolvimento/mod-entrega.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/mod-entrega.tex
@@ -1,7 +1,7 @@
-Neste módulo é apresentada à usabilidade do sistema por parte do motoboy, realizando a visualização da rota de entrega denominada para o momento.
+Neste módulo é apresentada a usabilidade do sistema por parte do motoboy, realizando a visualização da rota de entrega denominada para o momento.
 
 \subsection{Tracking de entregas}
-O primeiro status de uma entrega obrigatoriamente será \textit{CONFIRMED}, isso indica que a mesma foi planejada, visualizada e gerada pelo módulo de gerenciamento. Posteriormente a isso, a comanda (\autoref{fig:drCupom}) é impressa e então o fluxo de \textit{tracking} do pedido é iniciado (\autoref{fig:drFluxoPedido}).
+O primeiro status de uma entrega obrigatoriamente será \textit{CONFIRMED}. Isso indica que a mesma foi planejada, visualizada e gerada pelo módulo de gerenciamento. Posteriormente, a comanda (\autoref{fig:drCupom}) é impressa e então o fluxo de \textit{tracking} do pedido é iniciado (\autoref{fig:drFluxoPedido}).
 
  \begin{figure}[H]
     \centering
@@ -19,7 +19,7 @@ O primeiro status de uma entrega obrigatoriamente será \textit{CONFIRMED}, isso
     \label{fig:drFluxoPedido}
 \end{figure}
 
-Neste cenário, ao ler o código QR impresso na comanda o motoboy é direcionado para a rota \textit{/deliveries/{id}/dispatched} (\autoref{alg:funcDispatched}), alterando seu status para \textit{DISPATCHED} e executando uma nova rota \textit{/deliveries/{id}/view}, onde o parâmetro solicitado para ambas é o código da entrega.
+Neste cenário, ao ler o código QR impresso na comanda, o motoboy é direcionado para a rota \textit{/deliveries/{id}/dispatched} (\autoref{alg:funcDispatched}), alterando seu status para \textit{DISPATCHED} e executando uma nova rota \textit{/deliveries/{id}/view}, onde o parâmetro solicitado para ambas é o código da entrega.
 
 \begin{lstlisting}[caption={Delivery Routes - Função de despacho da entrega}, style=htmlcssjs, label=alg:funcDispatched]
 public function dispatched($id) {
@@ -49,7 +49,7 @@ Logo após o despacho da entrega, é apresentada na tela no \textit{smartphone} 
 \end{figure}
 
 \newpage
-Para obter a rota entre dois pontos e exibi-la no mapa, é necessário utilizar o serviço da \textit{Google Directions} API. Lendo a sua documentação, verificou-se necessário a implementação das classes \textit{google.maps.DirectionsService} e o \textit{google.maps.DirectionsRenderer}.
+Para obter a rota entre dois pontos e exibí-la no mapa, é necessário utilizar o serviço da \textit{Google Directions} API. Lendo a sua documentação, verificou-se necessário a implementação das classes \textit{google.maps.DirectionsService} e o \textit{google.maps.DirectionsRenderer}.
 
 Começando pelo \textit{DirectionsService}, o seu funcionamento é bem simples. Basta informar um objeto \textit{google.maps.DirectionsRequest}, o qual irá conter o ponto de origem e destino (\autoref{alg:currentPosition}), e o meio de transporte (carro, a pé, bicicleta ou transporte público), que ele irá retornar um objeto \textit{google.maps.DirectionsResult}, o qual contém as informações da rota, e o \textit{google.maps.DirectionsStatus}, que por sua vez define o estado final da requisição. Ele pode indicar sucesso (\textit{OK}), sem resultados (\textit{ZERO\_RESULTS}), erro (\textit{INVALID\_REQUEST} ou \textit{REQUEST\_DENIED}), etc.
 
@@ -99,7 +99,7 @@ directionsService.route(request, function(result, status) {
 });
 \end{lstlisting}
 
-O cálculo de distância e tempo (\autoref{alg:computeTotalDistance}), exibido na \autoref{fig:drRotaEntregaInicio}, é a última etapa. Nele é computado o tempo de deslocamento entre os pontos e também o tempo dos trâmites de entrega do produto para o cliente final, estimado em 5 minutos cada.
+O cálculo de distância e tempo (\autoref{alg:computeTotalDistance}), exibidos na \autoref{fig:drRotaEntregaInicio}, é a última etapa. Nele é computado o tempo de deslocamento entre os pontos e também o tempo dos trâmites de entrega do produto para o cliente final, estimado em 5 minutos cada.
 
 \begin{lstlisting}[caption={Delivery Routes - Função de cálculo do deslocamento}, style=htmlcssjs, label=alg:computeTotalDistance]
 function computeTotalDistance(result) {
