--- a/text-elements/textuais/desenvolvimento/ferramentas/mysql.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/mysql.tex
@@ -1,4 +1,4 @@
-Segundo \citeonline{thomsonphp}, o MySQL é o SGBDR (Sistema Gerenciador de Banco de Dados Relacional) mais utilizado atualmente, devido à sua performance rápida e consistente, além de estar disponível gratuitamente para fins não lucrativos, distribuído sob a licença GNU. O objetivo de um banco de dados é permitir o armazenamento, a classificação e a recuperação dos dados de uma forma eficiente. Contudo, um sistema de banco de dados tem como vantagens minimizar as incoerências, garantir a integridade dos dados, facilitar a realização de qualquer modificação necessária e possibilitar a criação de restrições de acesso, tudo de maneira muito organizada.
+Segundo \citeonline{thomsonphp}, o MySQL é o SGBDR (Sistema Gerenciador de Banco de Dados Relacional) mais utilizado atualmente, devido à sua \textit{performance} rápida e consistente, além de estar disponível gratuitamente para fins não lucrativos, distribuído sob a licença GNU. O objetivo de um banco de dados é permitir o armazenamento, a classificação e a recuperação dos dados de uma forma eficiente. Contudo, um sistema de banco de dados tem como vantagens minimizar as incoerências, garantir a integridade dos dados, facilitar a realização de qualquer modificação necessária e possibilitar a criação de restrições de acesso, tudo de maneira muito organizada.
 
 \newpage
 Desenvolvido pela empresa sueca MySQL AB e publicado, originalmente, em maio de 1995. Após, a empresa foi comprada pela Sun Microsystems e, em janeiro de 2010, integrou a compra da Sun pela Oracle Corporation. Atualmente, a Oracle, embora tenha mantido a versão para a comunidade, tornou seu uso mais restrito e os desenvolvedores criaram, então, o projeto MariaDB para continuar desenvolvendo o código da versão 5.1 do MySQL, de forma totalmente aberta e gratuita. O MariaDB pretende manter compatibilidade com as versões lançadas pela Oracle \cite{mariadb}.
