--- a/text-elements/textuais/desenvolvimento/tecnologias.tex
+++ b/text-elements/textuais/desenvolvimento/tecnologias.tex
@@ -7,10 +7,10 @@ Este Capítulo descreve as tecnologias necessárias para o desenvolvimento deste
 
 \section{API}
 %https://www.devmedia.com.br/application-programming-interface-desenvolvendo-apis-de-software/30548
-Destaca-se do pensamento de \citeonline{pressman2009engenharia} que API é o acrônimo de Interface de Programação de Aplicativos. Na grande maioria das vezes, uma API se comunica com diversos outros códigos, interligando diversas funções em um aplicativo, como pode ser visto na \autoref{fig:api}. Essa interface de programação é um conjunto de padrões de programação que permitem a construção de aplicativos e a sua utilização. Portanto, uma API é uma abstração da funcionalidade e da implementação interna de cada componente. Com uma API é possível criar sistemas melhores e minimizar o entendimento de todos os detalhes de um componente. Assim, serve como um “alicerce”, abstraindo a funcionalidade e implementação interna de cada componente.
+Destaca-se do pensamento de \citeonline{pressman2009engenharia} que API é o acrônimo de Interface de Programação de Aplicativos. Na grande maioria das vezes, uma API comunica-se com diversos outros códigos, interligando diversas funções em um aplicativo, como pode ser visto na \autoref{fig:api}. Essa interface de programação é um conjunto de padrões de programação que permitem a construção de aplicativos e a sua utilização. Portanto, uma API é uma abstração da funcionalidade e da implementação interna de cada componente. Com uma API é possível criar sistemas melhores e minimizar o entendimento de todos os detalhes de um componente. Assim, serve como um “alicerce”, abstraindo a funcionalidade e implementação interna de cada componente.
 
 Paralelamente a isso, segundo \citeonline{tulach2008practical}, API é um conjunto de classes, seus métodos e seus campos.
-Uma boa API é o conjunto de arquivos que o aplicativo lê ou escreve, bem como seu formato. Algumas aplicações sequer fazem uso do disco rígido, portanto, não precisam se preocupar com essa etapa. Tendo em vista que o primeiro objetivo da engenharia é produzir sistemas funcionais, uma API também precisa ser de fácil utilização, largamente adotada e produtiva. 
+Uma boa API é o conjunto de arquivos que o aplicativo lê ou escreve, bem como seu formato. Algumas aplicações sequer fazem uso do disco rígido e, portanto, não precisam se preocupar com essa etapa. Tendo em vista que o primeiro objetivo da engenharia é produzir sistemas funcionais, uma API também precisa ser de fácil utilização, largamente adotada e produtiva. 
 
 \begin{figure}[H]
     \centering
@@ -23,23 +23,23 @@ Uma boa API é o conjunto de arquivos que o aplicativo lê ou escreve, bem como 
 \newpage
 \subsection{REST}
 %Porém, a mesma não define tecnologias que devem ser utilizadas
-Segundo \citeonline{rest:roy}, o REST é uma sigla que significa \textit{Representational State Transfer}, é um modelo arquitetural que define um conjunto de regras simples para implementar serviços web, sem, no entanto, especificar as tecnologias que devem ser utilizadas. Uma forma de implementar REST é utilizar o conceito de \textit{RESTful} que se baseia no protocolo da aplicação HTTP, no padrão de nomenclatura URI e na linguagem XML/JSON. As respostas do REST são cacheáveis, o que possibilita um grande aumento de performance para clientes simples. Utilizando esse conceito, os serviços se tornam disponíveis para diferentes aplicações clientes, ou seja, não há necessidade de mudança de uma aplicação para outra, pois o serviço se concentra em um servidor próprio. 
+Segundo \citeonline{rest:roy}, REST é uma sigla que significa \textit{Representational State Transfer}, é um modelo arquitetural que define um conjunto de regras simples para implementar serviços web, sem, no entanto, especificar as tecnologias que devem ser utilizadas. Uma forma de implementar REST é utilizar o conceito de \textit{RESTful} que se baseia no protocolo da aplicação HTTP, no padrão de nomenclatura URI e na linguagem XML/JSON. As respostas do REST são cacheáveis, o que possibilita um grande aumento de \textit{performance} para clientes simples. Utilizando esse conceito, os serviços tornam-se disponíveis para diferentes aplicações clientes, ou seja, não há necessidade de mudança de uma aplicação para outra, pois o serviço concentra-se em um servidor próprio. 
 
-Depois de seu surgimento, o REST passou a representar uma alternativa mais leve de comunicação entre computadores (cliente e servidor). Para ser considerado REST, o \textit{Web Service} deve ser ou possuir: Interface uniforme, \textit{Stateless}, \textit{Cacheável}, Cliente-Servidor, Sistema em camadas e Código sob demanda \cite{rest:roy}. 
+Depois de seu surgimento, o REST passou a representar uma alternativa mais leve de comunicação entre computadores (cliente e servidor). Para ser considerado REST, o \textit{Web Service} deve ser ou possuir: Interface uniforme, \textit{Stateless}, Cacheável, Cliente-Servidor, Sistema em camadas e Código sob demanda \cite{rest:roy}. 
 
 \citeonline{rest:roy} destaca os seguintes pontos sobre o REST:
 \begin{itemize}
     \item Fazer uso de diferentes métodos (ou verbos) de comunicação (\textit{GET}, \textit{POST}, \textit{PUT}, \textit{DELETE}, \textit{HEAD}, \textit{OPTIONS}) do HTTP para realizar solicitações para API; 
     \item Utilização de \textit{headers} HTTP (tanto padronizados quanto customizados); 
     \item Definição de arquivos como recursos (cada um com seu próprio endereço)
-    \item Utilização de diferentes tipos de media \textit{type}. Exemplo, JSON ou XML para representação de dados. Por ser um formato menos verboso e normalmente menor, a transferência de dados com o uso de JSON causa uma carga menor na rede, além de ser mais facilmente consumido por clientes construídos com qualquer linguagem, em especial HTML5.
+    \item Utilização de diferentes tipos de \textit{media type}. Por exemplo, JSON ou XML para representação de dados. Por ser um formato menos verboso e normalmente menor, a transferência de dados com o uso de JSON causa uma carga menor na rede, além de ser facilmente consumido por clientes construídos com qualquer linguagem, em especial HTML5.
 \end{itemize}
 
 \subsection{W3C}
 A World Wide Web Consortium é a principal organização de padronização da rede mundial de computadores, desenvolvendo especificações técnicas e orientações através de um processo projetado para maximizar o consenso sobre as recomendações, garantindo qualidades técnicas e editoriais, por meio do desenvolvimento de protocolos comuns e fóruns abertos que promovam a sua evolução e assegurem a sua interoperabilidade, para levar a web ao seu potencial máximo \cite{api:w3c}.
 
 \section{Geolocalização}
-A geolocalização é a capacidade de identificar a localização geográfica, a partir de coordenadas, de determinado objeto ou usuário em monitoramento, com base em dados em tempo real. Esse tipo de sistema tem a capacidade de recuperar as informações de localização por meio do IP, GPS, conexão de \textit{wi-fi}, entre outros. A utilização da geolocalização pode se tornar útil para uma serie de objetivos, a exemplo da obtenção de informações sobre um determinado local ou uma rota de navegação \cite{geolocalizacao:2011}.
+A geolocalização é a capacidade de identificar a localização geográfica, a partir de coordenadas, de determinado objeto ou usuário em monitoramento, com base em dados em tempo real. Esse tipo de sistema tem a capacidade de recuperar as informações de localização por meio do IP, GPS, conexão de \textit{wi-fi}, entre outros. A utilização da geolocalização pode tornar-se útil para diversos objetivos, a exemplo da obtenção de informações sobre um determinado local ou uma rota de navegação \cite{geolocalizacao:2011}.
 
 A API de geolocalização consiste em um método para localizar exatamente a posição de um objeto ou usuário, sendo simples de ser implementada e utilizada. Existem duas formas de realizar a captura da geolocalização através da API, compatível com navegadores em \textit{desktop} ou dispositivos móveis. É necessária a autorização do usuário para acessar as suas informações de geolocalização, pois essas podem comprometer a sua privacidade e integridade \cite{geolocalizacao:2011}.
 
@@ -48,7 +48,7 @@ Compatibilidade com navegadores em \textit{desktop}:
     \item Firefox 3.5 ou superior;
     \item Chrome 5.0 ou superior;
     \item Opera 10,60 ou superior;
-    \item Internet Explorer 9.0 ou superior. \\
+    \item Internet Explorer 9.0 ou superior \cite{geolocalizacao:2011}. \\
 \end{itemize}
 
 Compatibilidade com navegadores em dispositivos móveis:
@@ -58,7 +58,7 @@ Compatibilidade com navegadores em dispositivos móveis:
     \item Opera Mobile 10.1 ou superior;
     \item Symbian (S60 3rd e 5 ª geração);
     \item Blackberry OS 6;
-    \item Maemo.
+    \item Maemo \cite{geolocalizacao:2011}.
 \end{itemize}
 
 \subsection{Fontes de geolocalização}
@@ -67,12 +67,12 @@ Para obter a localização do usuário podem-se utilizar diferentes fontes, as q
 
 \subsubsection{Métodos: getCurrentPosition e watchPosition}
 
-Segundo \citeonline{geolocalizacao:2011}, \textit{getCurrentPosition} e \textit{watchPosition} são os possíveis métodos para identificar a posição de um objeto ou usuário. Ambos retornam dados de forma imediata e, depois de forma assíncrona, tentam obter a localização atual. Eles carregam o mesmo número de argumentos, dois deles são opcionais: um \textit{callback}, para quando retornar corretamente o dado, outro \textit{callback}, para se caso ocorra algum tipo de erro, e um objeto \textit{PositionOptions} que apresenta as seguintes opções:
+Segundo \citeonline{geolocalizacao:2011}, \textit{getCurrentPosition} e \textit{watchPosition} são os possíveis métodos para identificar a posição de um objeto ou usuário. Ambos retornam dados de forma imediata e, depois de forma assíncrona, tentam obter a localização atual. Eles carregam o mesmo número de argumentos, dois deles são opcionais: um \textit{callback}, para quando retornar corretamente o dado, outro \textit{callback}, se caso ocorra algum tipo de erro, e um objeto \textit{PositionOptions} que apresenta as seguintes opções:
 
 \newpage
 \begin{itemize}
-    \item \textit{enableHighAccuracy}: atributo de controle que indica se deseja receber os resultados mais precisos, podem ter respostas mais lentas, ele recebe um valor \textit{boolean};
-    \item \textit{timeout}: tempo que o dispositivo demora para retornar uma posição, recebe um valor em milissegundos, com o padrão de 0;
+    \item \textit{enableHighAccuracy}: atributo de controle que proporciona receber os resultados mais precisos, podem ter respostas mais lentas, ele recebe um valor \textit{boolean};
+    \item \textit{timeout}: tempo que o dispositivo demora para retornar uma posição. Recebe um valor em milissegundos, com o padrão de 0;
     \item \textit{maximumAge}: denota o tempo máximo de uma posição em cache que o aplicativo estará disposto a aceitar. Tudo isso sendo realizado em milissegundos com o valor padrão 0, significando que uma tentativa deve ser realizada para obter um novo objeto imediatamente.
 \end{itemize}
 
@@ -88,10 +88,10 @@ Para que seja possível capturar a posição do objeto enquanto ele ou o usuári
 coords.latitude & Número decimal em graus da latitude \\ \hline
 coords.longitude & Número decimal em graus da longitude \\ \hline
 coords.altitude & Altura em metros da posição abaixo da Elipsoide de referência \\ \hline
-coords.accuracy & \begin{tabular}[c]{@{}l@{}}A precisão em metros do resultado retornado. O valor dessa \\ configuração informa a aplicação quão útil é o valor retornado\\ latitude/longitude é realmente. Isso pode ajudar a determinar \\ se o resultado retornado é precisa o suficiente para o propósito\\ a que se destina\end{tabular} \\ \hline
+coords.accuracy & \begin{tabular}[c]{@{}l@{}}A precisão em metros do resultado retornado. O valor dessa \\ configuração informa à aplicação o quão útil é o valor retornado\\ para latitude/longitude. Isso pode ajudar a determinar \\ se o resultado retornado é preciso o suficiente para o propósito\\ a que se destina\end{tabular} \\ \hline
 coords.altitudeAccuracy & A precisão em metros da altitude retornada \\ \hline
 coords.heading & \begin{tabular}[c]{@{}l@{}}Direção que o dispositivo deve tomar, no sentido horário a\\ partir do norte\end{tabular} \\ \hline
-coords.speed & A velocidade desolo atual do dispositivo em metros por segundo \\ \hline
+coords.speed & A velocidade de solo atual do dispositivo em metros por segundo \\ \hline
 timestamp & \textit{Timestamp} de quando a posição foi adquirida \\ \hline
 \end{tabular}
     \fonte{\citeonline{oficinanetagps:2018}}
@@ -108,7 +108,7 @@ O Sistema de Posicionamento Global Assistido, desenvolvido para localizar satél
     \label{fig:figura-funcagps}
 \end{figure}
 
-O A-GPS se torna superior à sua antecessora devido à melhora de precisão e disponibilidade das coordenadas do dispositivo em tempo real, apesar dos custos cobrados pela transferência de dados sobre a rede celular pela operadora utilizada. Esse sistema não sofre alterações de propagação \textit{multipath} (caminhos secundários que o sinal percorre até chegar à antena do receptor, como mostrado na \autoref{fig:figura-propagmultipath}), por exemplo, de construções, ruas, edifícios, rios, lagos, veículos ou condições atmosféricas \cite{oficinanetagps:2018} \cite{multicaminho:2004}.
+O A-GPS torna-se superior à sua antecessora devido à melhora de precisão e disponibilidade das coordenadas do dispositivo em tempo real, apesar dos custos cobrados pela transferência de dados sobre a rede celular pela operadora utilizada. Esse sistema não sofre alterações de propagação \textit{multipath} (caminhos secundários que o sinal percorre até chegar à antena do receptor, como mostrado na \autoref{fig:figura-propagmultipath}), por exemplo, de construções, ruas, edifícios, rios, lagos, veículos ou condições atmosféricas \cite{oficinanetagps:2018} \cite{multicaminho:2004}.
 
  A maior utilidade do sistema de A-GPS é vista em áreas urbanas, repletas de desfiladeiros urbanos, melhorando a experiência do usuário para todos os aplicativos que usam o GPS integrado e reduzindo o tempo que um aparelho com GPS leva para localizar a sua posição atual, conhecido como TTFF (Tempo de Localização Inicial) \cite{oficinanetagps:2018}.
 
@@ -124,9 +124,9 @@ O A-GPS se torna superior à sua antecessora devido à melhora de precisão e di
 
 Por um lado, o GPS realiza uma busca por satélites disponíveis para auxiliá-lo na navegação. Quando o GPS encontra o primeiro disponível, o aparelho recebe informações sobre a localização dos outros satélites próximos, iniciando a roteirização da localização atual do mesmo. Esse processo é demorado, pelo fato de que a conexão GPS entre os satélites é muito lenta \cite{oficinanetagps:2018}.
 
-Por outro lado, para dispositivos A-GPS, são utilizados servidores, por exemplo, uma torre de rede móvel (antenas de celulares) e bases (servidores) para obter as informações dos satélites constantemente. Como esses servidores estão continuamente enviando e recebendo informações dos satélites, não há atraso para conhecer a órbita e a localização exata deles. O tempo para o recebimento dos dados é muito menor que um GPS normal, já que os dados já estão armazenados nos servidores, que analisam os sinais fragmentados recebidos do receptor GPS e aqueles recebidos diretamente do satélite para corrigir erros, proporcionando uma localização exata do aparelho, uma vez que só precisará realizar alguns cálculos de triangulação com as antenas de redes móveis por final \cite{oficinanetagps:2018}.
+Por outro lado, para dispositivos A-GPS, são utilizados servidores, como, uma torre de rede móvel (antenas de celulares) e bases (servidores) para obter as informações dos satélites constantemente. Como esses servidores estão continuamente enviando e recebendo informações dos satélites, não há atraso para conhecer a órbita e a localização exata deles. O tempo para o recebimento dos dados é muito menor que um GPS normal, já que os dados já estão armazenados nos servidores, que analisam os sinais fragmentados recebidos do receptor GPS e aqueles recebidos diretamente do satélite para corrigir erros, proporcionando uma localização exata do aparelho, uma vez que só precisará realizar alguns cálculos de triangulação com as antenas de redes móveis \cite{oficinanetagps:2018}.
 
-Ainda, conforme o autor citado acima, a conexão inicial é feita com uma antena de telefonia celular que previamente armazenou a localização desses satélites e a transmite para o aparelho com uma velocidade até 40 vezes maior. Esse recurso só é possível em aparelhos com conexão GPRS, caso esse sinal esteja fraco devido a edifícios muito altos, o A-GPS utiliza o apoio da antena quando o sinal GPS, ajudando a manter o sinal estável. Não existindo cobertura de celular, o aparelho funcionará como um GPS convencional. O uso do A-GPS torna a utilização mais eficaz, evitando o aguardo pela conexão entre satélites. 
+Ainda conforme \citeonline{oficinanetagps:2018}, a conexão inicial é realizada com uma antena de telefonia celular que previamente armazenou a localização desses satélites e a transmite para o aparelho com uma velocidade até 40 vezes maior. Esse recurso só é possível em aparelhos com conexão GPRS, caso esse sinal esteja fraco devido a edifícios muito altos, o A-GPS utiliza o apoio da antena quando o sinal GPS, ajudando a manter o sinal estável. Não existindo cobertura de celular, o aparelho funcionará como um GPS convencional. O uso do A-GPS torna a utilização mais eficaz, evitando o aguardo pela conexão entre satélites. 
 
 Na \autoref{fig:figura-localizacaoGpsAgps} é possível visualizar como é feita a localização GPS e A-GPS.
 
@@ -140,7 +140,7 @@ Na \autoref{fig:figura-localizacaoGpsAgps} é possível visualizar como é feita
 
 \section{Google Maps}
 
-O \textit{Google Maps} é uma aplicação fornecida pela Google amplamente utilizada por aqueles que necessitam de auxílio para chegar a um local desconhecido. Além de oferecer o serviço de mapas, o software inclui outras características muito úteis, como as ferramentas para calcular as direções entre dois pontos. Pode-se obter mais informações sobre qualquer lugar, graças à utilização de fotos, \textit{webcams} e artigos. Seja pelos seus recursos básicos, como encontrar endereços específicos e verificar trajetos e distâncias entre dois ou mais pontos, ou pelos avançados, como a visão de satélite e o \textit{Google Street View}. Em parte, graças à sua enorme abrangência, poucas cidades e ruas ainda não estão mapeadas nesse serviço, permitindo fazer o download de uma área no dispositivo para ser usado sem conexão com a internet. Os mapas salvos dessa forma são renovados a cada 30 dias por meio de redes \textit{wi-fi}, caso o usuário fique mais de 30 dias sem usá-los, o aplicativo sugerirá que ele renove a área ou a apague para economizar espaço. Esse recurso é especialmente útil para viagem a outro país e sem plano de dados móveis \cite{google:2019}. Na \autoref{fig:figura-googlemaps}, pode-se ver um exemplo de visualização de mapa do \textit{Google Maps}.
+O \textit{Google Maps} é uma aplicação fornecida pela Google amplamente utilizada por aqueles que necessitam de auxílio para chegar a um local desconhecido. Além de oferecer o serviço de mapas, o software inclui outras características muito úteis, como as ferramentas para calcular as direções entre dois pontos. Pode-se obter mais informações sobre qualquer lugar, graças à utilização de fotos, \textit{webcams} e artigos. Seja pelos seus recursos básicos, como encontrar endereços específicos e verificar trajetos e distâncias entre dois ou mais pontos, ou pelos avançados, como a visão de satélite e o \textit{Google Street View}. Em parte, graças à sua enorme abrangência, poucas cidades e ruas ainda não estão mapeadas nesse serviço, permitindo fazer o download de uma área no dispositivo para ser usado sem conexão com a internet. Os mapas salvos dessa forma são renovados mensalmente por meio de redes \textit{wi-fi}, caso o usuário fique mais de 1 mês sem usá-los, o aplicativo sugerirá que ele renove a área ou a apague para economizar espaço. Esse recurso é especialmente útil para viagem a outro país e sem plano de dados móveis \cite{google:2019}. Na \autoref{fig:figura-googlemaps}, pode-se ver um exemplo de visualização de mapa do \textit{Google Maps}.
 
 \begin{figure}[H]
     \centering
@@ -150,23 +150,23 @@ O \textit{Google Maps} é uma aplicação fornecida pela Google amplamente utili
     \label{fig:figura-googlemaps}
 \end{figure}
 
-A principal ferramenta utilizada no \textit{Google Maps} é a busca por endereços. A partir de um computador, independentemente do navegador e do sistema operacional, basta digitar o endereço que deseja encontrar. Além de digitar o local manualmente, é possível indicá-lo diretamente no mapa. Também, é possível descobrir novos locais, como lojas, restaurantes, entre outros pontos de interesse facilmente, através de categorias e subcategorias, como “para ir com crianças” ou “para gastar pouco”. Os locais são escolhidos com base na localização atual e que se adaptam ao gosto de cada usuário. É comum ser disponibilizado mais de um caminho para o destino final, exibindo, por padrão, a mais rápido, levando em consideração a variação de trânsito para o horário do momento. Isso é possível porque o \textit{Google Maps} acumula informações sobre o tráfego da região. Ou seja, ele sabe qual é o fluxo de veículos para um determinado local em um determinado horário. Além de encontrar qualquer localidade, demonstrar informações meteorológicas ou indicações e caminhar ao redor das cidades mais importantes do globo, são seus diferenciais \cite{google:2019}.
+A principal ferramenta utilizada no \textit{Google Maps} é a busca por endereços. A partir de um computador, independentemente do navegador e do sistema operacional, basta digitar o endereço que deseja encontrar. Além de digitar o local manualmente, é possível indicá-lo diretamente no mapa. Também, é possível descobrir novos locais, como lojas, restaurantes, entre outros pontos de interesse facilmente, através de categorias e subcategorias, como “para ir com crianças” ou “para gastar pouco”. Os locais são escolhidos com base na localização atual e que se adaptam ao gosto de cada usuário. É comum ser disponibilizado mais de um caminho para o destino final, exibindo, por padrão, o mais rápido, levando em consideração a variação de trânsito para o horário do momento. Isso é possível porque o \textit{Google Maps} acumula informações sobre o tráfego da região. Ou seja, ele sabe qual é o fluxo de veículos para um determinado local em um determinado horário. Além de encontrar qualquer localidade, demonstrar informações meteorológicas ou indicações e caminhar ao redor das cidades mais importantes do globo, são seus diferenciais \cite{google:2019}.
 
 \newpage
 Para ajudar quem anda de ônibus, metrô ou trem, pelas cidades do mundo, é possível saber a melhor rota de transporte público, qual o ponto de ônibus mais perto e os locais de parada do coletivo. Dispondo de serviços de altitude para ciclistas, é possível identificar as variações do terreno em metros durante o trajeto, além de levar em conta a estrutura cicloviária da cidade. Às vezes, esse caminho pode não ser o mais direto entre os dois pontos, mas ele pretende ser o mais seguro e agradável para quem está pedalando \cite{google:2019}.
 
-Com uma enorme base de dados, serviços como Booking, Decolar ou Kayak, podem ser encontrados ao pesquisar por um hotel na plataforma da Google, contando com uma ferramenta interna para ajudar seus usuários, que apresenta diversas opções de quartos vagos na região, e seus preços médios. Caso o local de visita escolhido durante uma viagem seja bem conhecido, é possível fazer um \textit{tour} pelo espaço interno mapeado. No Maracanâ, por exemplo, é possível visualizar a divisão das arquibancadas. Muitas das opções de uso citadas fazem parte da \textit{Google Street View}, que mapeia locais possíveis de caminhar virtualmente por várias cidades ao redor do mundo, o que permite encontrar exatamente a fachada do local desejado. Além do \textit{Google Earth} e dos \textit{Indoor Maps}, o \textit{Google Maps} traz também outra função capaz explorar o mundo a partir da tela do computador chamada \textit{Google Treks}, desenvolvido para visitar virtualmente alguns lugares da Terra \cite{google:2019}.
+Com uma enorme base de dados, serviços como Booking, Decolar ou Kayak, podem ser encontrados ao pesquisar por um hotel na plataforma da Google, contando com uma ferramenta interna para ajudar seus usuários, que apresenta diversas opções de quartos vagos na região, e seus preços médios. Caso o local de visita escolhido durante uma viagem seja bem conhecido, é possível fazer um \textit{tour} pelo espaço interno mapeado. No Maracanã, por exemplo, é possível visualizar a divisão das arquibancadas. Muitas das opções de uso citadas fazem parte da \textit{Google Street View}, que mapeia locais possíveis de caminhar virtualmente por várias cidades ao redor do mundo, o que permite encontrar exatamente a fachada do local desejado. Além do \textit{Google Earth} e dos \textit{Indoor Maps}, o \textit{Google Maps} traz também outra função capaz explorar o mundo a partir da tela do computador chamada \textit{Google Treks}, desenvolvido para visitar virtualmente alguns lugares da Terra \cite{google:2019}.
 
 Ao selecionar a cidade de partida, a cidade de chegada e o meio de transporte “Avião”, o \textit{Google Maps} além de exibir informações de voos disponíveis para o trajeto, mostra a duração do voo e quais companhias aéreas operam aquele trajeto \cite{google:2019}. 
 
-O recurso mais recente adicionado à plataforma, permite planejar uma rota com \textit{waypoints}. Esse mecanismo permite fazer percursos que incluam diversas paradas, indicando o melhor caminho do ponto A até B, e depois de B até C, sem precisar mudar a rota novamente, portanto, é muito usado para encontrar o melhor caminho para visitar diversos pontos turísticos de uma cidade no mesmo dia \cite{google:2019}.
+O recurso mais recente adicionado à plataforma, permite planejar uma rota com \textit{waypoints}. Esse mecanismo permite fazer percursos que incluam diversas paradas, indicando o melhor caminho do ponto A até B, e depois de B até C, sem precisar mudar a rota novamente e, portanto, é muito usado para encontrar o melhor caminho para visitar diversos pontos turísticos de uma cidade no mesmo dia \cite{google:2019}.
 
 Várias ferramentas de visualização geoespacial dos principais \textit{players} da indústria da internet estão tomando o mundo digital. Google, Yahoo, Microsoft e Amazon lançaram ferramentas de mapeamento baseadas em geolocalização e, coletivamente, elevaram o nível de mapeamento da internet. Por mais que suas capacidades funcionais não forneçam nada muito diferente do que fornecedores tradicionais da GIS (\textit{Geographic Information System}) já tinham, o surgimento desses serviços foi notório na medida em que eles conseguiram captar um público mais amplo. O Google entrou como líder desses serviços com seu produto \textit{Google Maps}, que fornece uma interface visual atrativa, construídas com tecnologia AJAX, além de dados detalhados de imagens aéreas da superfície terrestre, e uma API aberta que permite a personalização do mapa, incluindo a capacidade de adicionar dados específicos ao mapa e de traçar rotas desejadas \cite{geospatial:2009}.
 
 \newpage
 \subsection{Google Maps Platform}
 
-A plataforma para desenvolvedores da Google se chama \textit{Google Maps Platform}, em que 99\% de cobertura no mundo, com a abrangência de mais de 200 países e territórios, estão disponíveis. Contemplando informações de local precisas e em tempo real, são mais de 25 milhões de atualizações por dia e 1 bilhão de usuários ativos por mês, tudo isso gerando uma grande base de dados para consulta \cite{google:2019}. Nela, se obtêm soluções para cada setor:
+A plataforma para desenvolvedores da Google se chama \textit{Google Maps Platform}, em que 99\% de cobertura no mundo, com a abrangência de mais de 200 países e territórios, estão disponíveis. Contemplando informações de local precisas e em tempo real, são mais de 25 milhões de atualizações por dia e 1 bilhão de usuários ativos por mês, tudo isso gerando uma grande base de dados para consulta \cite{google:2019}. Nela, obtêm-se soluções para cada setor:
 \begin{itemize}
     \item Serviço de transporte particular: disponibiliza a integração com qualquer aplicativo de serviço de transporte particular para diminuir os tempos de espera dos clientes e os erros de navegação dos motoristas;
     \item Jogos: permite criar jogos imersivos e realistas com milhões de estruturas em 3D personalizáveis, dados globais atualizados e integração perfeita com o Unity;
@@ -174,7 +174,7 @@ A plataforma para desenvolvedores da Google se chama \textit{Google Maps Platfor
 \end{itemize}
 
 \subsubsection{Maps}
-O recurso \textit{Maps} presente na\textit{Google Maps Platform}, leva o mundo real até os usuários por meio de mapas estáticos e dinâmicos, imagens do \textit{Google Street View} e visualizações 360º, visualizando o mundo com mapas eficientes e precisos, podendo ser incorporado em sites ou aplicativos. O \textit{Street View} e as imagens de satélite permitem  trabalhar com personalizações e sobreposições capazes de se adequar à necessidade de cada usuário, com uma infraestrutura sempre disponível para ampliação \cite{google:2019}. 
+O recurso \textit{Maps}, presente na \textit{Google Maps Platform}, leva o mundo real até os usuários por meio de mapas estáticos e dinâmicos, imagens do \textit{Google Street View} e visualizações 360º, visualizando o mundo com mapas eficientes e precisos, podendo ser incorporado em sites ou aplicativos. O \textit{Street View} e as imagens de satélite permitem  trabalhar com personalizações e sobreposições capazes de se adequar à necessidade de cada usuário, com uma infraestrutura sempre disponível para ampliação \cite{google:2019}. 
 
 \subsubsection{Routes}
 Através de dados abrangentes e trânsito em tempo real, encontrar o melhor caminho até o destino final se torna um trabalho rápido com o uso do recurso denominado \textit{Routes}. Com informações de navegação confiáveis e mais de 64 milhões de quilômetros de estradas em todo o mundo, traçar percursos entre cidades ou encontrar hotéis, permite maior eficiência, redução de custos e melhora a experiência dos clientes finais. Esse recurso permite planejar viagens munido de dados atualizados sobre a distância entre pontos, trajetos sugeridos e tempos estimados de deslocamento, com a capacidade de criar trajetos eficientes para até 25 pontos de referência, agilizando os sistemas de entrega, criando itinerários para turistas ou guiando os clientes que alugam carros do seu escritório até os hotéis, realocando o mesmo caso o caminho escolhido possua tráfego \cite{google:2019}. Sua eficiência é justificada pelo agrupamento dos seguinte recursos:
